[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/MenuButtons.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer"]
margin_left = 431.0
margin_top = 266.0
margin_right = 593.0
margin_bottom = 334.0
grow_horizontal = 2
alignment = 1
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="CenterContainer/MenuButtons"]
margin_right = 162.0
margin_bottom = 20.0
text = "I18N_STARTBUTTON"

[node name="SettingsButton" type="Button" parent="CenterContainer/MenuButtons"]
margin_top = 24.0
margin_right = 162.0
margin_bottom = 44.0
text = "I18N_OPTIONSBUTTON"

[node name="ExitButton" type="Button" parent="CenterContainer/MenuButtons"]
margin_top = 48.0
margin_right = 162.0
margin_bottom = 68.0
text = "I18N_EXITBUTTON"
[connection signal="pressed" from="CenterContainer/MenuButtons/StartButton" to="CenterContainer/MenuButtons" method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/SettingsButton" to="CenterContainer/MenuButtons" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/ExitButton" to="CenterContainer/MenuButtons" method="_on_ExitButton_pressed"]
